--- a/src/style.scss
+++ b/src/style.scss
@@ -20,7 +20,37 @@
 
 .item-todo {
   padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   &__text {
     font-size: 24px;
+  }
+
+  &__action {
+    button {
+      border: 1px solid #1caae2;
+      border-radius: 4px;
+      margin-right: 10px;
+      padding: 0;
+      width: 40px;
+      height: 40px;
+      background-color: white;
+      outline: none;
+      transition: 0.2s;
+
+      &:hover,
+      &:active {
+        border: 1px solid #1caae2;
+        background-color: #1caae2;
+        outline: none;
+      }
+      img {
+        padding: 0;
+        margin: 0;
+        width: 20px;
+        height: 20px;
+      }
+    }
   }
 }
