--- a/src/style.scss
+++ b/src/style.scss
@@ -42,7 +42,7 @@
 
       &:hover {
         border: 1px solid #1caae2;
-        background-color: #8ed7f3;
+        background-color: #c2eeff;
       }
       img {
         padding: 0;
