--- a/src/style.scss
+++ b/src/style.scss
@@ -26,6 +26,7 @@
   &__text {
     cursor: pointer;
     font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
   &__action {
@@ -67,5 +68,44 @@
   &:hover {
     border: 1px solid #1caae2;
     background-color: #1caae2;
+  }
+}
+
+.add-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  &__input {
+    border: 1px solid #1caae2;
+    border-radius: 4px;
+    margin-right: 30px;
+    padding: 6px;
+    background-color: white;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    outline: none;
+    flex-basis: 80%;
+    color: black;
+  }
+  &__btn {
+    border: 1px solid #1caae2;
+    border-radius: 4px;
+    padding: 0;
+    flex-basis: 20%;
+    padding: 10px;
+    height: 42px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: white;
+    background-color: #1caae2;
+    outline: none;
+    transition: 0.2s;
+
+    &:hover {
+      border: 1px solid #1caae2;
+      background-color: #c2eeff;
+      color: #1caae2;
+    }
   }
 }
