--- a/src/style.scss
+++ b/src/style.scss
@@ -80,7 +80,7 @@
     border: 1px solid #1caae2;
     border-radius: 4px;
     margin-right: 30px;
-    padding: 6px;
+    padding: 10px 10px 10px 16px;
     background-color: white;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
@@ -88,13 +88,19 @@
     flex-basis: 80%;
     color: black;
   }
+  ::placeholder {
+    font-size: 18px;
+    color: rgb(197, 196, 196);
+    font-style: italic;
+  }
+
   &__btn {
     border: 1px solid #1caae2;
     border-radius: 4px;
     padding: 0;
     flex-basis: 20%;
     padding: 10px;
-    height: 42px;
+    height: 50px;
     font-size: 18px;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
@@ -107,5 +113,22 @@
       background-color: #c2eeff;
       color: #1caae2;
     }
+  }
+}
+.counter-todo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  cursor: default;
+  &__text {
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: black;
+  }
+  &__num {
+    font-size: 22px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgb(117, 10, 10);
   }
 }
