--- a/src/style.scss
+++ b/src/style.scss
@@ -132,3 +132,29 @@
     color: rgb(117, 10, 10);
   }
 }
+.search-todo {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  width: 100%;
+  margin: 20px 0;
+  &__input {
+    border: 1px solid #1caae2;
+    border-radius: 4px;
+    margin-right: 30px;
+    padding: 10px 10px 10px 16px;
+    background-color: white;
+    font-size: 24px;
+    font-family: Arial, Helvetica, sans-serif;
+    outline: none;
+    flex-basis: 80%;
+    color: black;
+    flex-basis: 60%;
+    
+  }
+  ::placeholder {
+    font-size: 18px;
+    color: rgb(197, 196, 196);
+    font-style: italic;
+  }
+}
