--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,12 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  &__search-and-filter {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
 }
 
 .list-todo {
@@ -135,26 +141,62 @@
 .search-todo {
   display: flex;
   align-items: center;
-  justify-content: flex-start;
-  width: 100%;
   margin: 20px 0;
+  flex-basis: 60%;
   &__input {
     border: 1px solid #1caae2;
     border-radius: 4px;
-    margin-right: 30px;
+    margin-right: 10px;
     padding: 10px 10px 10px 16px;
     background-color: white;
     font-size: 24px;
     font-family: Arial, Helvetica, sans-serif;
     outline: none;
-    flex-basis: 80%;
     color: black;
-    flex-basis: 60%;
-    
+    width: 100%;
   }
   ::placeholder {
     font-size: 18px;
     color: rgb(197, 196, 196);
     font-style: italic;
+  }
+}
+
+.filter-todo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-basis: 40%;
+  &__btn {
+    width: 100%;
+    border: 1px solid #1caae2;
+    border-radius: 4px;
+    padding: 0;
+    padding: 10px;
+    height: 50px;
+    font-size: 18px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: #1caae2;
+    background-color: white;
+    outline: none;
+    transition: 0.2s;
+    margin-left: 10px;
+
+    &:hover {
+      border: 1px solid #1caae2;
+      background-color: #c2eeff;
+      color: #1caae2;
+    }
+
+    &--active {
+      color: white;
+      background-color: #1caae2;
+
+      &:hover {
+        border: 1px solid #1caae2;
+        background-color: #5ec2e9;
+        color: white;
+      }
+    }
   }
 }
